tests/negative/gold/no-nl-test.gold
tests/negative/no-nl-test.toit:9:3: error: Incomplete expression
  if
  ^
tests/negative/no-nl-test.toit:9:3: error: Missing colon for 'if' condition
  if
  ^~
Compilation failed
